# protein-foundation-benchmark

./: .gitignore  LICENSE  README.md  benchmark.py  environment.yml  pyproject.toml  setup.py
configs/datasets/: fluorescence.yaml  tape_ss3.yaml
configs/experiments/: esm2_baseline.yaml
configs/framework/: default.yaml  runtime.yaml
configs/hydra/: config.yaml
configs/models/: esm2.yaml  protbert.yaml  proteinbert.yaml
docs/: architecture.md  benchmark_protocol.md  reproducibility.md  roadmap.md
metadata/: environment.json  manifest.json
notebooks/: README.md  benchmark.ipynb
requirements/: base.txt  dev.txt  kaggle.txt  tensorflow.txt
scripts/: download_dataset.py  evaluate.py  export_results.py  run_benchmark.py
src/: __init__.py
src/datasets/: __init__.py  base_dataset.py  downloader.py  tape_ss3.py
src/datasets/custom/: __init__.py
src/datasets/deeploc/: __init__.py
src/datasets/tape/: __init__.py
src/evaluator/: __init__.py  evaluator.py
src/framework/: __init__.py  artifact_registry.py  benchmark.py  checkpoint.py  config.py  environment.py  experiment.py  pipeline.py  registry.py
src/interfaces/: __init__.py  base_dataset.py  base_metric.py  base_model.py  base_reporter.py  base_trainer.py
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py
src/models/bilstm/: __init__.py
src/models/cnn/: __init__.py
src/models/esm2/: __init__.py
src/registry/: __init__.py  dataset_registry.py  metric_registry.py  model_registry.py
src/reporter/: __init__.py  excel.py  latex.py  markdown.py  publication.py  reporter.py
src/statistics/: __init__.py  statistical_tests.py  statistics.py
src/trainer/: __init__.py  base_trainer.py  tensorflow_trainer.py  torch_trainer.py  trainer.py  trainer_factory.py
src/utils/: __init__.py  cache_manager.py  environment.py  io.py  logging.py  seed.py
src/visualization/: __init__.py  plots.py  visualization.py
tests/: __init__.py  test_proteinbert.py  test_proteinbert_adapter.py  test_proteinbert_checkpoints.py  test_proteinbert_preprocessing.py  test_proteinbert_runtime.py
(+12 files in other folders)
